syntax = "proto3";

package org.server.rsaga.reservation;

message CreateReservationInitRequest{
  int64 businessId = 1;
  int64 reservableItemId = 2;
  int64 reservableItemTimeId = 3;
  int64 userId = 4;
  int64 requestQuantity = 5;
}