syntax = "proto3";

package org.server.rsaga.reservation;

import "google/protobuf/wrappers.proto";

enum ReservationStatus{
    RESERVED = 0;
    CANCELED = 1;
    COMPLETED = 2;
    PENDING = 3;
    FAILED = 4;
}